deploy/k8s/apps/user-stats-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-stats-service
spec:
  selector:
    app: user-stats-service
    component: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
